tests/ui/auto-traits/assoc-ty.next.stderr
error[E0380]: auto traits cannot have associated items
  --> $DIR/assoc-ty.rs:10:10
   |
LL | auto trait Trait {
   |            ----- auto traits cannot have associated items
LL |
LL |     type Output;
   |          ^^^^^^

error[E0658]: auto traits are experimental and possibly buggy
  --> $DIR/assoc-ty.rs:8:1
   |
LL | / auto trait Trait {
LL | |
LL | |     type Output;
LL | |
LL | | }
   | |_^
   |
   = note: see issue #13231 <https://github.com/rust-lang/rust/issues/13231> for more information
   = help: add `#![feature(auto_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0271]: type mismatch resolving `<() as Trait>::Output normalizes-to _`
  --> $DIR/assoc-ty.rs:15:12
   |
LL |     let _: <() as Trait>::Output = ();
   |            ^^^^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `<() as Trait>::Output normalizes-to _`
  --> $DIR/assoc-ty.rs:15:12
   |
LL |     let _: <() as Trait>::Output = ();
   |            ^^^^^^^^^^^^^^^^^^^^^ types differ
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0380, E0658.
For more information about an error, try `rustc --explain E0271`.
